[package]
name = "reinforcement_learning"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_algo"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
rand = "0.9.0"
ndarray = "0.16.1"
pyo3 = { version = "0.24.1", features = ["extension-module"] }
